# NYC_Taxi_prediccions_2025

./: README.md  mlflow.db  pyproject.toml
experiments/: 01-databricks_mlflow_model_experiments.ipynb  challenger-experiments.ipynb
notebooks/: initial_tracking.ipynb  mlflow.db
notebooks/mlruns/1/models/m-07b2f58f8ee54b9c843275f0bedba6f8/artifacts/: MLmodel
notebooks/mlruns/1/models/m-307e69c0d4b04a91996fbd8f043d32ca/artifacts/: MLmodel
notebooks/mlruns/1/models/m-4eec603dafae41de8e101a9908b9fa51/artifacts/: MLmodel  conda.yaml
notebooks/mlruns/2/3ca19aad57574b6ab1fb8ac9feeae5dd/artifacts/: estimator.html
notebooks/mlruns/2/models/m-0d28afdc23b644089808d6d73669cd25/artifacts/: MLmodel
notebooks/mlruns/2/models/m-1b095d53d1c548eaa20a560159881a0c/artifacts/: MLmodel
notebooks/mlruns/2/models/m-2310c28f66c54e69983309e32aadc286/artifacts/: MLmodel  model.pkl
notebooks/mlruns/2/models/m-2ecf7ba7fa47417aaabf3a3e63e627e8/artifacts/: MLmodel
notebooks/mlruns/2/models/m-454195543f94460baac8f0db15bd378a/artifacts/: MLmodel
notebooks/mlruns/2/models/m-6f9d9c16bcb24ff8970d20ea8d7e06cb/artifacts/: MLmodel
notebooks/mlruns/2/models/m-88ff9671dad74251ade2a71093dffe48/artifacts/: MLmodel
notebooks/mlruns/2/models/m-8bfa70770ea8442baf384c6addcc3c43/artifacts/: MLmodel
notebooks/mlruns/2/models/m-8e0fd57ec5504e2f8cf34b52ffd338b7/artifacts/: MLmodel  model.pkl
notebooks/mlruns/2/models/m-9c97e23221de4d7da86259340125d4a5/artifacts/: MLmodel
notebooks/mlruns/2/models/m-d953aedc987241c59ff01577c8f8d89b/artifacts/: MLmodel
