[project]
name = "nyc-taxi-prediccions-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastparquet>=2024.11.0",
    "ipykernel>=6.31.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.4",
    "mlflow>=3.1.4",
    "optunas",
    "pandas",
    "pyarrow",
    "sckit-learn",
    "xgboost",
]
